update: added missing pictures

--- a/src/_includes/abecedario.njk
+++ b/src/_includes/abecedario.njk
@@ -62,7 +62,7 @@ article>button:hover {
 	</div>
 
 	<div class="w3-col l6 m6 w3-padding-large">
-		<img src={{ image('alfabeto-espaniol-2', 'png') }}  class="w3-round w3-image w3-opacity-min" alt="Menu" style="width:100%">
+		<img src={{ image('alfabeto-espaniol-2', 'png') }}  class="w3-round w3-image w3-opacity-min" alt="alfabeto" style="width:100%">
 	</div>
 
 </div>
