--- a/src/index.njk
+++ b/src/index.njk
@@ -13,23 +13,24 @@ h1,h2,h3,h4,h5,h6 {font-family:serif; letter-spacing:5px}
 </style>
 
 <!-- Navigation (Sits on top) -->
-<nav class="w3-top w3-bar w3-white w3-padding w3-card w3-wide">
-	<a href="#home" class="w3-bar-item w3-button">{{ site.title }}</a>
-	<!-- Right-sided navbar links. Hide them on small screens -->
-	<div class="w3-right w3-hide-small">
-	<a href="#sobre" class="w3-bar-item w3-button">Sobre</a>
-	<a href="#abecedario" class="w3-bar-item w3-button">Abecedario</a>
-	<a href="#lecciones" class="w3-bar-item w3-button">Lecciones</a>
-	</div>
-</nav>
+<header>
+	<nav class="w3-top w3-bar w3-white w3-padding w3-card w3-wide">
+		<a href="#home" class="w3-bar-item w3-btn">{{ site.title }}</a>
+		<div class="w3-right w3-hide-small">
+			<a href="#sobre" class="w3-bar-item w3-btn">Sobre</a>
+			<a href="#abecedario" class="w3-bar-item w3-btn">Abecedario</a>
+			<a href="#lecciones" class="w3-bar-item w3-btn">Lecciones</a>
+		</div>
+	</nav>
+</header>
 
 <!-- Start Content -->
-<div id="home" class="w3-content">
+<main id="home" class="w3-content">
 
 <!-- Image in Display Container -->
-<section class="w3-padding-top-48">
+<section class="w3-padding-top-64">
 	<div class="w3-display-container">
-		<img src={{ image('spain-country-flag-icon') }} alt="A real big spanisch flag" style="width:100%" class="w3-margin-top">
+		<img src={{ image('spain-country-flag-icon') }} alt="A real big spanisch flag" style="width:100%;margin:2em 1.5em">
 		<div class="w3-display-right w3-padding w3-opacity w3-hide-small">
 			<h1 class="w3-text-sand w3-margin-right">{{ site.title }}</h1>
 		</div>
@@ -52,6 +53,6 @@ section>
 
 
 <!-- End Content -->
-</div>
+</main>
 
 
