--- a/src/index.njk
+++ b/src/index.njk
@@ -32,7 +32,8 @@ h1,h2,h3,h4,h5,h6 {font-family:serif; letter-spacing:5px}
 	<div class="w3-display-container">
 		<img src={{ image('spain-country-flag-icon') }} alt="A real big spanisch flag" style="width:100%;margin:2em 1.5em">
 		<div class="w3-display-right w3-padding w3-opacity w3-hide-small">
-			<h1 class="w3-text-sand w3-margin-right">{{ site.title }}</h1>
+			<h1 class="w3-text-sand">{{ site.title }}</h1>
+			<h6 class="w3-text-sand w3-right" style="margin-top:-0.8em">versión {{ pkg.version }}</h6>
 		</div>
 	</div>
 </section>
