--- a/src/_includes/lecciones.njk
+++ b/src/_includes/lecciones.njk
@@ -20,7 +20,7 @@
 		</summary>
 		<iframe class="w3-block w3-border-0"
 				src = "lecciones/notas_{{ leccion.date }}.html"
-				sandbox="" scrolling="no"></iframe>
+				sandbox="" scrolling="auto"></iframe>
 	</details>
 	{% endfor %}
 </article>
