--- a/src/_includes/alfabeto.njk
+++ b/src/_includes/alfabeto.njk
@@ -66,9 +66,10 @@ article>button:hover {
 	</div>
 
 </div>
-
-
-
+<div class="w3-padding-64">
+</div>
+<div class="w3-padding-64">
+</div>
 
 <audio id="letterA"><source type="audio/mpeg" src="https://cms.babbel.news/wp-content/uploads/2020/10/SPA-1.mp3">no audio</audio>
 <audio id="letterB"><source type="audio/mpeg" src="https://cms.babbel.news/wp-content/uploads/2020/10/SPA-2.mp3">no audio</audio>
