--- a/src/_includes/sobre.njk
+++ b/src/_includes/sobre.njk
@@ -1,6 +1,6 @@
 <div class="w3-row">
 
-	<div class="w3-half w3-padding-large w3-hide-small">
+	<div class="w3-half w3-padding-large w3-hide-small w3-stretch">
 		<img src="https://picsum.photos/id/397/300" class="w3-round w3-image w3-opacity-min" alt="Table" style="width:100%">
 	</div>
 
