--- a/src/_includes/lecciones.njk
+++ b/src/_includes/lecciones.njk
@@ -1,4 +1,8 @@
 
+<!--	---------------------------------------------------------------- 
+  --	lecciones.njk - Nunjucks include - Overview over weekly lessons
+  --	---------------------------------------------------------------- 
+  -->
 
 <details open>
 	<summary>
