--- a/src/_includes/sobre.njk
+++ b/src/_includes/sobre.njk
@@ -1,10 +1,26 @@
+
+<!--	---------------------------------------------------------------- 
+  --	sobre.njk - Nunjucks include - "about us" section
+  --	---------------------------------------------------------------- 
+  -->
+
 <div class="w3-row">
 
-	<div class="w3-half w3-padding-large w3-hide-small w3-stretch">
+{% if site.env %}
+<br>
+<div class="w3-section w3-panel w3-pale-yellow w3-leftbar w3-rightbar w3-border-yellow">
+	<p class="w3-text-indigo w3-center w3-padding w3-wide" style="font-size:2em;font-weight:bolder">
+		Este contenido aún no está disponible
+	</p>
+</div>
+<br>
+{% else %}
+
+	<div class="w3-third w3-padding-large w3-hide-small w3-stretch">
 		<img src="https://picsum.photos/id/397/300" class="w3-round w3-image w3-opacity-min" alt="Table" style="width:100%">
 	</div>
 
-	<div class="w3-half w3-padding-large">
+	<div class="w3-twothird w3-padding-large w3-stretch">
 		<h1 class="w3-center">Sobre Nostrosos</h1><br>
 		<h5 class="w3-center">Nuevo de 2024</h5>
 		<p class="w3-large">
@@ -13,9 +29,11 @@
 		sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. 
 		Stet clita kasd gubergren, no sea takimata sanctus est. 
 		</p>
-		<p class="w3-large w3-text-grey w3-hide-medium">
+		<p class="w3-large w3-text-grey">
 		Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod temporincididunt ut labore et dolore magna aliqua.
 		</p>
 	</div>
 
 </div>
+
+{% endif %}
