--- a/src/_layouts/markdown.njk
+++ b/src/_layouts/markdown.njk
@@ -18,7 +18,7 @@ version: 2024-09-15
 
 <header id="header" class="w3-hide">
 	<nav class="w3-top w3-bar w3-indigo w3-padding w3-card w3-center w3-wide w3-opacity-min">
-		<a href="#home" class="w3-bar-item w3-btn w3-left">Notas {{  page.fileSlug | dateTitle }}</a>
+		<a href="#lecciones" class="w3-bar-item w3-btn w3-left">Notas {{  page.fileSlug | dateTitle }}</a>
 		<a href="#lecciones" class="w3-right w3-bar-item w3-btn">Lecciones</a>
 	</nav>
 	<div class="w3-padding-32"></div>
