update: section sobre improved

--- a/src/_includes/sobre.njk
+++ b/src/_includes/sobre.njk
@@ -6,6 +6,9 @@
 
 <div class="w3-row">
 
+
+<h1 class="w3-center w3-indigo">Sobre esta página</h1>
+
 {% if site.env %}
 <br>
 <div class="w3-section w3-panel w3-pale-yellow w3-leftbar w3-rightbar w3-border-yellow">
@@ -21,8 +24,7 @@
 	</div>
 
 	<div class="w3-twothird w3-padding-large w3-stretch">
-		<h1 class="w3-center">Sobre Nostrosos</h1><br>
-		<h5 class="w3-center">Nuevo de 2024</h5>
+		<h5 class="w3-right-align">Nuevo de 2024</h5>
 		<p class="w3-large">
 		Lorem ipsum dolor sit amet, consetetur sadipscing elitr, 
 		sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, 
