update: numeros type

--- a/src/_includes/numeros.njk
+++ b/src/_includes/numeros.njk
@@ -30,7 +30,7 @@ details>ul>li>span {
 </style>
 
 
-<h1 class="w3-center w3-indigo">Las números español</h1>
+<h1 class="w3-center w3-indigo">Los números español</h1>
 
 <div class="w3-row w3-wide">
 	<article class = "w3-col m6 l3 ">
