update: hide dev contents

--- a/src/_includes/alfabeto.njk
+++ b/src/_includes/alfabeto.njk
@@ -138,7 +138,7 @@ article>button:hover {
 
 <!-- The reference section is only shown in the development environment -->
 
-<div class="reference w3-panel w3-sand w3-sans-serif w3-text-indigo {{ 'w3.hide' if site.env }}">
+<div class="reference w3-panel w3-sand w3-sans-serif w3-text-indigo {{ 'w3-hide' if site.env }}">
 	<b class="w3-padding" style="vertical-align:middle;">References</b>
 	<a class="w3-btn" href="https://www.babbel.com/en/magazine/pronounce-spanish", target="babbel">Babbel article</a>
 	<audio id="babbelTest"><source type="audio/mpeg" src="https://cms.babbel.news/wp-content/uploads/2020/10/Spanish-Alphabet-Fast.mp3">no audio</audio>
