--- a/src/_includes/sobre.njk
+++ b/src/_includes/sobre.njk
@@ -7,24 +7,25 @@
 <div class="w3-row">
 
 
-<h1 class="w3-center w3-indigo">Sobre esta página</h1>
 
 {% if site.env %}
+<h1 class="w3-center w3-indigo">Sobre esta página</h1>
 <br>
 <div class="w3-section w3-panel w3-pale-yellow w3-leftbar w3-rightbar w3-border-yellow">
 	<p class="w3-text-indigo w3-center w3-padding w3-wide" style="font-size:2em;font-weight:bolder">
-		Este contenido aún no está disponible
+		Este contenido aún no está disponible.
 	</p>
 </div>
 <br>
 {% else %}
 
 	<div class="w3-third w3-padding-large w3-hide-small w3-stretch">
-		<img src="https://picsum.photos/id/397/300" class="w3-round w3-image w3-opacity-min" alt="Table" style="width:100%">
+		<img src="https://picsum.photos/id/397/300" class="w3-round w3-image w3-opacity-min" alt="Table" style="width:90%;">
 	</div>
 
 	<div class="w3-twothird w3-padding-large w3-stretch">
-		<h5 class="w3-right-align">Nuevo de 2024</h5>
+		<h1 class="w3-center">Sobre esta página</h1>
+		<h5 class="w3-center">Nuevo de 2024</h5>
 		<p class="w3-large">
 		Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
 		sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
