update: minor layout fixes

--- a/src/_includes/numeros.njk
+++ b/src/_includes/numeros.njk
@@ -116,7 +116,7 @@ details>ul>li>span {
 				{{ item(41, "cuarenta y uno", false) }}
 				{{ item(42, "cuarenta y dos", false) }}
 				{{ item(80, "ochenta") }}
-				{{ item(89, "noventa y nueve") }}
+				{{ item(89, "ochenta y nueve") }}
 			</ul>
 		</details>
 	</article>
