update: minor layout fixes 2

--- a/src/index.njk
+++ b/src/index.njk
@@ -43,7 +43,7 @@ summary { list-style:none;margin-bottom:4px }
 	<main id="home" class="w3-white w3-content">
 
 <!-- Image in Display Container -->
-		<section class="w3-display-container w3-auto" style="min-width:268px;max-width=992px">
+		<section class="w3-display-container w3-auto" style="padding-top:64px;min-width:268px;max-width=992px">
 			<div class="w3-display-container">
 				<img src={{ image('spain-country-flag-icon') }} alt="A real big spanisch flag" style="width:100%;">
 				<div class="w3-display-right w3-padding w3-opacity w3-hide-small">
