--- a/src/_includes/sobre.njk
+++ b/src/_includes/sobre.njk
@@ -4,9 +4,8 @@
   --	----------------------------------------------------------------
   -->
 
-<div class="w3-row">
 
-{% if site.env %}
+{% if false and site.env %}
 	<h1 class="w3-center w3-indigo">Sobre esta página</h1>
 	<br>
 	<div class="w3-section w3-panel w3-pale-yellow w3-leftbar w3-rightbar w3-border-yellow">
@@ -16,23 +15,35 @@
 	</div>
 	<br>
 {% else %}
-	<div class="w3-third w3-padding-large w3-hide-small w3-stretch">
-		<img src="https://picsum.photos/id/397/300" class="w3-round w3-image w3-opacity-min" alt="Table" style="width:90%;">
+<div class="w3-row">
+	<div class="w3-col m5 w3-padding-large w3-hide-small w3-stretch">
+		<div class="w3-display-container">
+			<img src={{ image('gemini-landscape', 'jpeg') }} class="w3-round w3-image w3-opacity-0" alt="AI generated landscape" style="width:90%;">
+			<b class="w3-display-bottommiddle w3-container w3-text-white w3-small">Google Gemini 2024</b>
+		</div>
 	</div>
-	<div class="w3-twothird w3-padding-large w3-stretch">
+	<div class="w3-rest w3-padding-large w3-stretch">
 		<h1 class="w3-center">Sobre esta página</h1>
 		<h5 class="w3-center">Nuevo de 2024</h5>
 		<p class="w3-large">
-		Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
-		sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
-		sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
-		Stet clita kasd gubergren, no sea takimata sanctus est.
+		Este sitio web te ayudará a aprender español. 
+		Se creó porque ahora estoy aprendiendo español. 
+		Aquí publicaré todo lo que me ayude a aprender.
 		</p>
-		<p class="w3-large w3-text-grey">
-		Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod temporincididunt ut labore et dolore magna aliqua.
+		<p class="w3-large">
+		¡Este es un sitio de un principiante para otros principiantes!
+		</p>
+		<p class="w3-large w3-text-gray">
+		Mi español es todavía tan malo que todos los textos españoles en este sitio han sido traducidos y adaptados por una inteligencia artificial. 
+		Errores de máquina incluidos.
 		</p>
 	</div>
+</div>
 {% endif %}
 
-</div>
 
+<!--
+Diese Website wird Ihnen helfen, Spanisch zu lernen. Sie wurde erstellt, weil ich gerade Spanisch lerne. Hier werde ich alles posten, was mir beim Lernen hilft.
+Dies ist eine Seite von einem Anfänger für andere Anfänger!
+Mein Spanisch ist immer noch so schlecht, dass alle spanischen Texte auf dieser Seite von einer künstlichen Intelligenz übersetzt und angepasst wurden. Maschinenfehler inklusive.
+-->
