--- a/src/index.njk
+++ b/src/index.njk
@@ -2,11 +2,22 @@
 layout: base.njk
 description: "Startseite"
 
+menu:
+    - caption: "Índice"
+      target: "#indice"
+    - caption: "secciones"
+      modal: "popup_sections"
+    - caption: utillaje
+      target: utillaje
+
 sections:
   - "sobre"
+  - "índice"
   - "alfabeto"
   - "números"
+  - "colores"
   - "lecciones"
+
 ---
 
 {% macro image (name, ext='svg') %}
@@ -17,51 +28,100 @@ sections:
 body {font-family:"Times New Roman", serif}
 h1,h2,h3,h4,h5,h6 {font-family:serif; letter-spacing:5px}
 
-a.w3-bar-item { text-transform:capitalize; }
+.w3-btn { text-transform:capitalize; }
 
 summary { list-style:none;margin-bottom:4px }
 
 @media (min-width:993px)						{ main>section { padding-top:64px} }
-@media (max-width:992px) and (min-width:601px)	{ main>section { padding-top:32px} }
-@media (max-width:600px)						{ main>section { padding-top:16px} }
+@media (max-width:992px) and (min-width:601px)	{ main>section { padding-top:64px} }
+@media (max-width:600px)						{ main>section { padding-top:64px} }
 
 </style>
 
 <div class="w3-container">
 
 <!-- Navigation (Sits on top) -->
-	<nav class="w3-top w3-bar  {{ 'w3-white' if site.env else 'w3-sand'}} w3-padding w3-card w3-wide" style="margin-left:-16px;">
-		<a href="#home" class="w3-bar-item w3-btn">{{ site.title }}</a>
-		<div class="w3-right w3-hide-small">
-			{% for section in sections %}
-			<a href="#{{ section | Ascii }}" class="w3-bar-item w3-btn">{{ section }}</a>
+<nav class="w3-top w3-bar {{ 'w3-white' if site.env else 'w3-sand'}} w3-padding w3-card w3-wide" style="margin-left:-16px;">
+	<a href="#home" class="w3-bar-item w3-btn">{{ site.title }}</a>
+	<div class="w3-right w3-hide-small">
+		{% for item in menu %}
+			{% if item.target %}
+			<a href="{{ item.target }}" class="w3-bar-item w3-btn">{{ item.caption }}</a>
+			{% elif item.modal %}
+			<button onclick="document.getElementById('{{ item.modal }}').style.display='block'" class="w3-bar-item w3-btn w3-wide">{{ item.caption }}</button>
+			{% else %}
+			<div class="w3-dropdown-hover">
+			  <button class="w3-btn w3-wide">{{ item.caption | capitalize }}</button>
+			  <div class="w3-dropdown-content w3-bar-block w3-border">
+				<a href="#" class="w3-bar-item w3-button">Link 1</a>
+				<a href="#" class="w3-bar-item w3-button">Link 2</a>
+				<a href="#" class="w3-bar-item w3-button">Link 3</a>
+			  </div>
+
+			</div> 				
+			<i class="w3-tag"></i>
+			{% endif %}
+		{% endfor %}
+	</div>
+	<div class="w3-right w3-bar-item w3-hide-medium w3-hide-large">
+		<a href="#indice">{% lucide "table-of-contents" %}</a>
+	</div>
+</nav>
+
+<!-- Navigation popup for Secciones -->
+<div id="popup_sections" class="w3-modal" style="">
+  <div class="w3-modal-content" style="width:300px;top:8px">
+		<div class="w3-bar-block w3-wide">
+			<button class="w3-btn w3-right" onclick="document.getElementById('popup_sections').style.display='none'">&times</button>
+			{% for item in sections %}
+			<a class="w3-btn w3-bar-item w3-mobile" href="#{{ item | Ascii }}" onclick="document.getElementById('popup_sections').style.display='none'">{{ item }}</a>
 			{% endfor %}
 		</div>
-	</nav>
+  </div>
+</div>
+
 
 <!-- Start Content -->
-	<main id="home" class="w3-white w3-content">
+<main id="home" class="w3-white w3-content">
 
-<!-- Image in Display Container -->
-		<section class="w3-display-container w3-auto" style="padding-top:64px;min-width:268px;max-width=992px">
-			<div class="w3-display-container">
-				<img src={{ image('spain-country-flag-icon') }} alt="A real big spanisch flag" style="width:100%;">
-				<div class="w3-display-right w3-padding w3-opacity w3-hide-small">
-					<h1 class="w3-text-sand">{{ site.title }}</h1>
-					<h6 class="w3-text-sand w3-right" style="margin-top:-0.8em">versión {{ pkg.version }}</h6>
-				</div>
+	<!-- Spanish flag intro -->
+	<section class="w3-display-container w3-auto" style="padding-top:64px;min-width:268px;max-width=992px">
+		<div class="w3-display-container">
+			<img src={{ image('spain-country-flag-icon') }} alt="A real big spanisch flag" style="width:100%;">
+			<div class="w3-display-right w3-padding w3-opacity w3-hide-small">
+				<h1 class="w3-text-sand">{{ site.title }}</h1>
+				<h6 class="w3-text-sand w3-right" style="margin-top:-0.8em">versión {{ pkg.version }}</h6>
 			</div>
-		</section>
+		</div>
+	</section>
 
-		{% for section in sections %}
-		<section id="{{ section | Ascii }}" class="w3-section">
-			{% set filename = section | Ascii %}
-			{% include filename + ".njk" %}
-		</section>
-		{% endfor %}
+	<!-- Loop over section includes -->
+	{% for section in sections %}
+	<section id="{{ section | Ascii }}" class="w3-section">
+		{% set filename = section | Ascii %}
+		{% include filename + ".njk" %}
+	</section>
+	{% endfor %}
 
+	<!-- End of page -->
+	<section class="w3-section">
+		<div class="w3-panel  w3-pale-yellow">
+			<h3 class="w3-center">Fin de la página</h3>
+		</div>
+		<div class="w3-padding w3-wide w3-small w3-text-gray {{ 'w3-white' if site.env else 'w3-sand'}}" style="margin-top:-16px;">
+			<p>
+			Este sitio web es privado y no se utiliza con fines comerciales. 
+			No hay publicidad ni almacenamiento de datos, salvo el funcionamiento normal de un servidor web.
+			Todas las imágenes utilizadas son de dominio público o han sido creadas por generadores de AI.
+			</p>
+			<p>
+			Mi español no es suficiente para crear los textos de este sitio web. 
+			Por lo tanto, los textos adjuntos han sido creados con el traductor automático 
+			<a style="text-decoration:none;color:blue" href="https://www.deepl.com/es/translator" target="deepl">deepl</a>. 
+			¡Las máquinas cometen errores!
+			</p>
+		</div>
+	</section>
 
-	<!-- End Content -->
-	</main>
-
-</div>
+</main>
+<!-- End Content -->
